--- a/chatrooms/public/index.html
+++ b/chatrooms/public/index.html
@@ -19,5 +19,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
 <script src="/javascript/char.js" type="text/javascript"></script>
 <script src="/javascript/char_ui.js" type="text/javascript"></script>
+<script>
+</script>
 </body>
 </html>
